can create account w/o email verification

--- a/HRMS.Web/Views/Shared/_Layout.cshtml
+++ b/HRMS.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="SILUPOST WEB ADMIN">
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
-    <title>@ViewBag.Page.Title - SILUPOST WEB ADMIN</title>
+    <title>@ViewBag.Page.Title - HEALTH RECORD MANAGEMENT</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="~/plugins/Proppeller-Material-Design-Bootstrap/favicon.ico">
 
@@ -95,8 +95,8 @@
         <div class="container-fluid">
             <ul class="list-unstyled list-inline">
                 <li>
-                    <span class="pmd-card-subtitle-text">Propeller &copy; <span class="auto-update-year"></span>. All Rights Reserved.</span>
-                    <h3 class="pmd-card-subtitle-text">Licensed under <a href="https://opensource.org/licenses/MIT" target="_blank">MIT license.</a></h3>
+                    <span class="pmd-card-subtitle-text">WEB-BASED HEALTH RECORD MANAGEMENT &copy; <span class="auto-update-year"></span>. All Rights Reserved.</span>
+                    <h3 class="pmd-card-subtitle-text">Licensed under <a href="https://opensource.org/licenses/MIT" target="_blank">Apache-2.0 license.</a></h3>
                 </li>
                 <li class="pull-right for-support">
                     <a href="mailto:support@propeller.in">
@@ -104,7 +104,7 @@
                         </div>
                         <div>
                             <span class="pmd-card-subtitle-text">For Support</span>
-                            <h3 class="pmd-card-title-text">support@propeller.in</h3>
+                            <h3 class="pmd-card-title-text">samplesupport@gmail.com</h3>
                         </div>
                     </a>
                 </li>
