--- a/HRMS.Web/Views/Shared/_NavBar.cshtml
+++ b/HRMS.Web/Views/Shared/_NavBar.cshtml
@@ -36,7 +36,7 @@
                     @if (ViewBag.Page.Title == "Dashboard")
                     {
                         <a href="#" class="navbar-brand">
-                            SILUPOST
+                            HEALTH RECORD MANAGEMENT SYSTEM
                         </a>
                     }
                     else
