--- a/HRMS.Web/Views/Account/Login.cshtml
+++ b/HRMS.Web/Views/Account/Login.cshtml
@@ -72,8 +72,10 @@
 		<div class="login-card">
             <form id="form-login">
                 <div class="pmd-card-title card-header-border text-center">
-                    <a href="javascript:void(0);"><img width="100" height="100" src="/Resources/Images/SIGIN_LOGO.png" alt="Logo"></a>
-                    <h3>Sign In <span>with <strong>SILUPOST</strong></span></h3>
+                    <a href="javascript:void(0);"><img width="100" height="100" src="/Resources/Images/hrms_logo.png" alt="Logo"></a>
+                    <br />
+                    <br />
+                    <h3>Sign In</h3>
                 </div>
 
                 <div class="pmd-card-body">
