--- a/HRMS.Web/Views/Account/Register.cshtml
+++ b/HRMS.Web/Views/Account/Register.cshtml
@@ -77,8 +77,10 @@
         <div class="pmd-card card-default pmd-z-depth">
             <div class="login-card">
                 <div class="pmd-card-title card-header-border text-center">
-                    <a href="javascript:void(0);"><img width="100" height="100" src="/Resources/Images/SIGIN_LOGO.png" alt="Logo"></a>
-                    <h3>Create account <span>with <strong>SILUPOST</strong></span></h3>
+                    <a href="javascript:void(0);"><img width="100" height="100" src="/Resources/Images/hrms_logo.png" alt="Logo"></a>
+                    <br />
+                    <br />
+                    <h3>Create account</h3>
                 </div>
 
                 <div class="pmd-card-body">
