--- a/HRMS.Web/Views/Account/ResetPassword.cshtml
+++ b/HRMS.Web/Views/Account/ResetPassword.cshtml
@@ -76,8 +76,10 @@
         <div class="pmd-card card-default pmd-z-depth">
             <div class="login-card">
                 <div class="pmd-card-title card-header-border text-center">
-                    <a href="javascript:void(0);"><img width="100" height="100" src="/Resources/Images/SIGIN_LOGO.png" alt="Logo"></a>
-                    <h3>Reset Password <span>with <strong>SILUPOST</strong></span></h3>
+                    <a href="javascript:void(0);"><img width="100" height="100" src="/Resources/Images/hrms_logo.png" alt="Logo"></a>
+                    <br />
+                    <br />
+                    <h3>Reset Password</h3>
                 </div>
 
                 <div class="pmd-card-body">
