can send sms verification

--- a/HRMS.Web/Views/Account/Register.cshtml
+++ b/HRMS.Web/Views/Account/Register.cshtml
@@ -86,15 +86,15 @@
                 <div class="pmd-card-body">
                     <div class="form-group row">
                         <div class="col-xs-12">
-                            <div class="radio hidden">
+                            <div class="radio">
                                 <label class="pmd-radio pmd-radio-ripple-effect">
-                                    <input type="radio" name="btnRadioVerification" id="btnRadioMobileNumberVerification" value="MobileNumber">
+                                    <input type="radio" name="btnRadioVerification" id="btnRadioMobileNumberVerification" value="MobileNumber" checked>
                                     <span for="btnRadioMobileNumberVerification">Mobile Number</span>
                                 </label>
                             </div>
-                            <div class="radio">
+                            <div class="radio hidden">
                                 <label class="pmd-radio pmd-radio-ripple-effect">
-                                    <input type="radio" name="btnRadioVerification" id="btnRadioEmailVerification" value="Email" checked>
+                                    <input type="radio" name="btnRadioVerification" id="btnRadioEmailVerification" value="Email">
                                     <span for="btnRadioEmailVerification">Email</span>
                                 </label>
                             </div>
@@ -287,14 +287,6 @@
                                 </div>
                             </div>
                         </div>
-                        @*<div class="group-fields clearfix row">
-                            <div class="col-xs-12">
-                                <label class="form-group pure-material-textfield-outlined">
-                                    <input id="EnforcementStationGuestCode" name="EnforcementStationGuestCode" data-link="EnforcementStationGuestCode" placeholder=" " />
-                                    <span>Guest Code</span>
-                                </label>
-                            </div>
-                        </div>*@
                     </form>
                 </div>
                 <div class="pmd-card-footer card-footer-no-border card-footer-p16 text-center">
