--- a/HRMS.Web/Content/Site.css
+++ b/HRMS.Web/Content/Site.css
@@ -247,3 +247,15 @@
 .nav-tabs {
     background-color: #EC407A !important;
 }
+
+.select2-container--bootstrap.select2-container--focus .select2-selection, .select2-container--bootstrap.select2-container--open .select2-selection {
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6) !important;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6) !important;
+    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s !important;
+    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s !important;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s !important;
+    border-color: #66afe9 !important;
+}
+.select2-container--bootstrap .select2-selection--single {
+    padding: 6px 24px 6px 6px!important;
+}
